// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> matches snapshot 1`] = `
<span
  class="sc-gswNZR cIJjVU"
>
  <div>
    <div
      class="sc-bcXHqe hhKHdx count"
    >
      11
    </div>
  </div>
</span>
`;

exports[`<CartCount /> updates via props 1`] = `
<span
  class="sc-gswNZR cIJjVU"
>
  <div>
    <div
      class="sc-bcXHqe hhKHdx count count-enter count-enter-active"
    >
      12
    </div>
    <div
      class="sc-bcXHqe hhKHdx count count-exit count-exit-active"
    >
      11
    </div>
  </div>
</span>
`;
